日本語修正

--- a/index_jp.html
+++ b/index_jp.html
@@ -120,7 +120,7 @@
             </p>
             <h6>多様なアクティビティ</h6>
             <p>
-              スキー以外にも、パウダーベルトは地元の食事、アイスビレッジ、高級宿泊施設などの充実したアフタースキーシーンを提供しています。星野リゾートトマムのようなリゾートでは、ミナミナビーチ（日本最大の室内プール）やアイスビレッジのアイスバーなどのユニークな魅力があり、エキサイティングな滞在を保証します。
+              スキー以外にも、パウダーベルトは地元の食事、アイスヴィレッジ、高級宿泊施設などの充実したアフタースキーシーンを提供しています。星野リゾート　トマムのようなリゾートでは、ミナミナビーチ（日本最大の室内プール）やアイスヴィレッジのアイスバーなどのユニークな魅力があり、エキサイティングな滞在を保証します。
             </p>
             <p>
               素晴らしい北海道パウダーベルトで、比類のない雪質、多様なスキーオプション、そして活気に満ちたアフタースキーアクティビティをお楽しみください。
@@ -203,7 +203,7 @@
                     <li>
                       HPBの5日間パス（https://hokkaido-powder-belt.jp/index-en.php）
                     </li>
-                    <li>星野リゾート トマムの施設利用</li>
+                    <li>星野リゾート　トマムの施設利用</li>
                     <li>星野リゾート OMO 7旭川の施設利用</li>
                   </ul>
                 </div>
@@ -236,7 +236,7 @@
                 <div class="swiper-button-prev"></div>
               </div>
               <div>
-                <h6>星野リゾート トマム</h6>
+                <h6>星野リゾート　トマム</h6>
                 <p>
                   星野リゾート
                   トマムは、北海道の中心に位置する最高級のスキーリゾートです。
@@ -247,14 +247,14 @@
                   <ul>
                     <li>お一人様につき朝食2回無料券</li>
                     <li>充実したアメニティ</li>
-                    <li>ミナ・ミナビーチ</li>
+                    <li>ミナミナビーチ</li>
                     <li>木林の湯 入浴</li>
                     <li>駐車 ＊駐車スペースの確保は含まれていません</li>
                   </ul>
                 </ul>
                 <div class="text-center">
                   <a
-                    href="https://www.snowtomamu.jp/winter/en/"
+                    href="https://www.snowtomamu.jp/winter/"
                     class="my-midium"
                     target="_blank"
                     >Read More</a
@@ -386,10 +386,10 @@
                   <li>
                     新千歳空港に到着し、キャンピングカーをレンタルします。
                   </li>
-                  <li>星野リゾート トマムへ</li>
+                  <li>星野リゾート　トマムへ</li>
                   <li>一日中スキーをお楽しみいただけます。</li>
                   <li>
-                    アイスビレッジで氷のワンダーランドを探検しましょう（要追加料金）。
+                    アイスヴィレッジで氷のワンダーランドを探検しましょう（要追加料金）。
                   </li>
                   <li>パーキングエリアで一泊。</li>
                 </ul>
@@ -398,10 +398,10 @@
               <li class="list-title">
                 2日目:
                 <ul>
-                  <li>フォレストレストランニニヌプリで朝食。</li>
+                  <li>森のレストラン「ニニヌプリ」で朝食。</li>
                   <li>トマムスキー場でもっとスキーを楽しみましょう。</li>
                   <li>
-                    ミナミナビーチで頂上アクティビティをお楽しみください。
+                    ミナミナビーチで水上アクティビティをお楽しみください。
                   </li>
                   <li>キャンピングカーで一泊。</li>
                 </ul>
@@ -411,7 +411,7 @@
                 3日目:
                 <ul>
                   <li>ビュッフェダイニングホールでの朝食。</li>
-                  <li>星野リゾート トマムから富良野スキー場へ移動。</li>
+                  <li>星野リゾート　トマムから富良野スキー場へ移動。</li>
                   <li>富良野スキー場でスキー。</li>
                   <li>旭川市へ移住。</li>
                   <li>居酒屋で夕食。</li>
@@ -783,7 +783,7 @@
               <h6>木林の湯</h6>
 
               <p>
-                星野リゾート トマムで絶景の星空観察を体験
+                星野リゾート　トマムで絶景の星空観察を体験
                 ゲレンデから歩いてすぐのところにある露天風呂。
               </p>
 
@@ -1030,7 +1030,7 @@
             <div class="answer">
               <p>
                 駐車場の位置はこちらからご確認ください。<br />
-                星野リゾート トマム<br />
+                星野リゾート　トマム<br />
                 https://www.snowtomamu.jp/winter/areamap/ <br />OMO7 旭川 ｂｙ
                 星の リゾート
                 <br />https://omo-hotels.com/asahikawa/access/#anc-parking
